Fix bootstrap override not copied properly to the site-specific file for the navbar dropdown right margin, which forced the nav to wrap when all navs actice for market managers such as FRESH
git-svn-id: svn+ssh://lo-svn/opt/localorbit/lo3/trunk@1007 e1dfb558-8c25-43e7-bb2c-da0e82dfb25a

--- a/www/less/site_specific.less
+++ b/www/less/site_specific.less
@@ -66,7 +66,7 @@ hr {
 // ----------
 
 .navbar .nav {
-	margin: 0 10px 0 0;
+	margin: 0 0 0 0;
 }
 
 /* popovers.less */
